--- a/index.html
+++ b/index.html
@@ -140,6 +140,55 @@
              </div>
          </div>
         </section> 
+
+        <section class="experience section" > 
+             <h2 class="section_title">
+                ith Our Experience <br> We Will Serve You
+             </h2>
+             <div class="experience_container container grid">
+                 <div class="experience_content grid">
+                    <div class="experien_data">
+                        <h2 class="experience_number">20</h2>
+                        <span class="experience_description">
+                            Year <br> Experience
+                            Complete <br> tours
+                            Tourist <br> Destination
+                        </span>
+                    </div> 
+                    <div class="experien_data">
+                        <h2 class="experience_number">75</h2>
+                        <span class="experience_description">
+                            Year <br> Experience
+                            Complete <br> tours
+                            Tourist <br> Destination
+                        </span>
+                    </div>
+
+                    <div class="experien_data">
+                        <h2 class="experience_number">650+</h2>
+                        <span class="experience_description">
+                            Year <br> Experience
+                            Complete <br> tours
+                            Tourist <br> Destination
+                        </span>
+                    </div>
+                 </div> 
+                 <div class="experience_img grid">
+                     <div class="experience_overlay">
+                         <img src="./assets/img/experience1.jpg" alt="" class="experience_one">
+                     </div>
+
+                     <div class="experience_overlay">
+                        <img src="./assets/img/experience2.jpg" alt="" class="experience_image-one">
+                    </div>
+                 </div>
+             </div>
+        </section> 
+
+        <section class="video section" > 
+
+        </section>
+
         <section class="place section" id="place"> 
 
         </section>
