last design commit

--- a/index.html
+++ b/index.html
@@ -186,12 +186,241 @@
         </section> 
 
         <section class="video section" > 
-
+           <h2 class="section_title">
+               Video Tour
+           </h2>
+           <div class="video_container container">
+            <p class="video_description">
+                Find out more with our video of the most beautiful and pleasant places for you and your family.
+               </p>
+               <div class="video_content">
+                   <video src="/assets/video/video.mp4" id="video-file" type="video/mp4"></video>
+                   <button class="button button--flex video_button" id="video-button">
+                       <i class="ri-play-line video_button-icon" id="video-icon"></i>
+                   </button>
+               </div>
+           </div>
         </section>
 
         <section class="place section" id="place"> 
+         <h2 class="section_title">
+             Choose Your Place
+         </h2>
+         <div class="place_container container grid">
+             <div class="place_card">
+                 <img src="/assets/img/place1.jpg" alt="" class="place_img">
+                 <div class="place_content">
+                     <span class="place_rating">
+                         <i class="ri-star-line place_rating-icon"></i>
+                         <span class="place_rating-number">4.6</span>  
+                     </span>
+                     <div class="place_data">
+                        <h3 class="place_title">BALI</h3>
+                        <span class="place_subtitle">Indonesia</span>
+                        <span class="place_price">$2499</span>
+                    </div>
+                 </div>
 
+                 <button class="button button--flex place_button">
+                     <i class="ri-arrow-right-line"></i>
+                 </button>
+             </div>
+
+             <div class="place_card">
+                <img src="/assets/img/place2.jpg" alt="" class="place_img">
+                <div class="place_content">
+                    <span class="place_rating">
+                        <i class="ri-star-line place_rating-icon"></i>
+                        <span class="place_rating-number">4.6</span>
+                    </span>
+                    <div class="place_data">
+                        <h3 class="place_title">BALI</h3>
+                        <span class="place_subtitle">Indonesia</span>
+                        <span class="place_price">$2499</span>
+                    </div>
+                </div>
+
+                <button class="button button--flex place_button">
+                    <i class="ri-arrow-right-line"></i>
+                </button>
+            </div>
+
+            <div class="place_card">
+                <img src="/assets/img/place3.jpg" alt="" class="place_img">
+                <div class="place_content">
+                    <span class="place_rating">
+                        <i class="ri-star-line place_rating-icon"></i>
+                        <span class="place_rating-number">4.6</span>
+                    </span>
+                    <div class="place_data">
+                        <h3 class="place_title">BALI</h3>
+                        <span class="place_subtitle">Indonesia</span>
+                        <span class="place_price">$2499</span>
+                    </div>
+                </div>
+
+                <button class="button button--flex place_button">
+                    <i class="ri-arrow-right-line"></i>
+                </button>
+            </div>
+
+            <div class="place_card">
+                 <img src="/assets/img/place4.jpg" alt="" class="place_img">
+                 <div class="place_content">
+                     <span class="place_rating">
+                         <i class="ri-star-line place_rating-icon"></i>
+                         <span class="place_rating-number">4.6</span>
+                     </span>
+                     <div class="place_data">
+                        <h3 class="place_title">BALI</h3>
+                        <span class="place_subtitle">Indonesia</span>
+                        <span class="place_price">$2499</span>
+                    </div>
+                 </div>
+
+                 <button class="button button--flex place_button">
+                     <i class="ri-arrow-right-line"></i>
+                 </button>
+             </div>
+
+             <div class="place_card">
+                <img src="/assets/img/place5.jpg" alt="" class="place_img">
+                <div class="place_content">
+                    <span class="place_rating">
+                        <i class="ri-star-line place_rating-icon"></i>
+                        <span class="place_rating-number">4.6</span>
+                    </span>
+                    <div class="place_data">
+                        <h3 class="place_title">BALI</h3>
+                        <span class="place_subtitle">Indonesia</span>
+                        <span class="place_price">$2499</span>
+                    </div>
+                </div>
+
+                <button class="button button--flex place_button">
+                    <i class="ri-arrow-right-line"></i>
+                </button>
+            </div>
+         </div>
         </section>
+
+        <section class="subscribe section">
+            <div class="subscribe_bg">
+                <div class="subscribe_container container">
+                    <h2 class="subscribe_title">Subscribe Our <br> Newsletter</h2>
+                    <p class="subscribe_description">Subscribe to our newsletter and get a special 30% discount.</p>
+
+                    <form action="#" class="subscribe_form">
+                        <input type="text" placeholder="Enter emai" class="subscribe_input">
+                        <button class="button">
+                            subscribe
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsor section">
+            <div class="sponsor_container container grid">
+                <div class="sponsor_content">
+                    <img src="/assets/img/sponsors1.png" alt="" class="sponsor_img">
+                </div>
+
+                <div class="sponsor_content">
+                    <img src="/assets/img/sponsors2.png" alt="" class="sponsor_img">
+                </div>
+
+                <div class="sponsor_content">
+                    <img src="/assets/img/sponsors3.png" alt="" class="sponsor_img">
+                </div>
+                <div class="sponsor_content">
+                    <img src="/assets/img/sponsors4.png" alt="" class="sponsor_img">
+                </div>
+                <div class="sponsor_content">
+                    <img src="/assets/img/sponsors5.png" alt="" class="sponsor_img">
+                </div>
+                
+            </div>
+        </section>
+        <footer class="footer section">
+            <div class="footer_container container grid">
+               <div class="footer_content grid">
+                <div class="footer_data">
+                    <h3 class="footer_title">Travel</h3>
+                    <p class="footer_description">Travel you choose the <br> destination, we offer you the <br> experience.</p>
+                    <div>
+                        <a href="https://www.facebook.com/" target="_blank" class="footer_social">
+                            <i class="ri-facebook-box-fill"></i>
+                        </a>
+
+                        <a href="https://twitter.com/" target="_blank" class="footer_social">
+                            <i class="ri-twitter-fill"></i>
+                        </a>
+
+                        <a href="https://www.instagram.com/" target="_blank" class="footer_social">
+                            <i class="ri-instagram-fill"></i>
+                        </a>
+
+                        <a href="https://www.youtube.com/" target="_blank" class="footer_social">
+                            <i class="ri-youtube-fill"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="footer_data">
+                    <h3 class="footer_subtitle">About</h3>
+                    <ul>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">About Us</a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Features</a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Blogs</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer_data">
+                    <h3 class="footer_subtitle">Company</h3>
+                    <ul>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Team</a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Plan Y pricing</a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Become Member</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer_data">
+                    <h3 class="footer_subtitle">Support</h3>
+                    <ul>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">FAQs</a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Support Center</a>
+                        </li>
+                        <li class="footer_item">
+                            <a href="" class="footer_llink">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+               </div>
+               <div class="footer_rights">
+                <p class="footer_copy">&#169; 2021 Bedimcode. All rigths reserved.</p>
+                <div class="footer_terms">
+                    <a href="" class="footer_terms-link">Terms & Agreements</a>
+                    <a href="" class="footer_terms-link">Privacy Policy</a>
+                </div>
+            </div>
+            </div>
+        </footer>
 
     </main> 
     <script src="./assets/js/swiper-bundle.min.js"></script>
